hphp/hack/test/typecheck/references/refs_in_array/pass_by_ref.php.exp
File "pass_by_ref.php", line 7, characters 13-18:
Passing array elements by reference is no longer supported; use 'inout' instead (Typing[4253])
